# foxadventure

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose.yaml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: bokun.py  main.py  routers.py  utils.py
api/templates/: index.html  vessels_table.html
